got d3 working. If simply.

--- a/Graphification.ipynb
+++ b/Graphification.ipynb
@@ -1260,6 +1260,58 @@
    "source": [
     "HTML(\"test.html\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open('graph.graphml', 'w') as f:\n",
+    "    f.writelines(\"<?xml version=\\\"1.0\\\" encoding=\\\"UTF-8\\\"?>\\n\")\n",
+    "    f.writelines(\"<graphml>\\n\")\n",
+    "    f.writelines(\"<graph id=\\\"G\\\" edgedefault=\\\"undirected\\\">\\n\")\n",
+    "    for co in tick2comp.keys():\n",
+    "        f.writelines(\"<node id=\\\"\" + co + \"\\\">\\n\")\n",
+    "        f.writelines(\"<data key=\\\"type\\\">company</data>\\n\")\n",
+    "        f.writelines(\"</node>\\n\")\n",
+    "    for person in allPeople:\n",
+    "        f.writelines(\"<node id=\\\"\" + person + \"\\\">\\n\")\n",
+    "        f.writelines(\"<data key=\\\"person\\\">person</data>\\n\")\n",
+    "        f.writelines(\"</node>\\n\")\n",
+    "    edgeIDCounter = 0\n",
+    "    for key in company_company.keys():\n",
+    "        source, target = key.split(\"_\")\n",
+    "        f.writelines(\"<edge id=\\\"\" + str(edgeIDCounter) +\\\n",
+    "                     \"\\\" source=\\\"\" + source + \"\\\" target=\\\"\" \\\n",
+    "                     + target + \"\\\">\\n\")\n",
+    "        f.writelines(\"<data key=\\\"weight\\\">\" +\\\n",
+    "                     str(company_company[key]) + \"</data>\\n\")\n",
+    "        f.writelines(\"</edge>\\n\")\n",
+    "        edgeIDCounter += 1\n",
+    "    for key in company_people.keys():\n",
+    "        source, target = key.split(\"_\")\n",
+    "        f.writelines(\"<edge id=\\\"\" + str(edgeIDCounter) +\\\n",
+    "                     \"\\\" source=\\\"\" + source + \"\\\" target=\\\"\" \\\n",
+    "                     + target + \"\\\">\\n\")\n",
+    "        f.writelines(\"<data key=\\\"weight\\\">\" +\\\n",
+    "                     str(company_people[key]) + \"</data>\\n\")\n",
+    "        f.writelines(\"</edge>\\n\")\n",
+    "        edgeIDCounter += 1\n",
+    "    for key in people_people.keys():\n",
+    "        source, target = key.split(\"_\")\n",
+    "        f.writelines(\"<edge id=\\\"\" + str(edgeIDCounter) +\\\n",
+    "                     \"\\\" source=\\\"\" + source + \"\\\" target=\\\"\" \\\n",
+    "                     + target + \"\\\">\\n\")\n",
+    "        f.writelines(\"<data key=\\\"weight\\\">\" +\\\n",
+    "                     str(people_people[key]) + \"</data>\\n\")\n",
+    "        f.writelines(\"</edge>\\n\")\n",
+    "        edgeIDCounter += 1\n",
+    "    f.writelines(\"</graph>\")\n",
+    "    f.writelines(\"</graphml>\")"
+   ]
   }
  ],
  "metadata": {
